tests/ui/maybe.stderr
error: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> tests/ui/maybe.rs:32:11
   |
32 |     Self: ?Sized,
   |           ^^^^^^

error: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> tests/ui/maybe.rs:43:11
   |
43 |     Self: ?Sized,
   |           ^^^^^^

error: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> tests/ui/maybe.rs:73:12
   |
73 |         T: ?Sized,
   |            ^^^^^^

error: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> tests/ui/maybe.rs:22:11
   |
22 |     Self: ?Sized,
   |           ^^^^^^
